# TallyLight

./: .gitignore  Cargo.toml  LICENSE  README.md  flash.sh  run.sh  setup.sh  sudo  test.py
.cargo/: config.toml
src/: main.rs
