[package]
authors = ["Alexander Gherardi <alexander.2003@live.com>"]
edition = "2018"
readme = "README.md"
name = "tally"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
cortex-m-semihosting = "0.3.3"
panic-halt = "0.2.0"
embedded-hal = "0.2.3"
nb = "1.0"
arduino_nano33iot = { git = "https://github.com/atsamd-rs/atsamd", features = ["usb"]}
usb-device = "0.2"
usbd-serial = "0.1"
alloc-cortex-m = "0.4.1"
hex = { version = "0.4", default-features = false }

[[bin]]
name = "tally"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
